--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   },
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
-    "govuk-frontend": "5.0.0",
-    "govuk-prototype-kit": "13.16.0"
+    "@govuk-prototype-kit/step-by-step": "2.2.2",
+    "@govuk-prototype-kit/task-list": "2.0.0",
+    "@ministryofjustice/frontend": "^2.1.1",
+    "@x-govuk/govuk-prototype-components": "^3.0.3",
+    "govuk-frontend": "5.2.0",
+    "govuk-prototype-kit": "13.16.1",
+    "notifications-node-client": "8.0.0"
   }
 }
