--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@govuk-prototype-kit/common-templates": "2.0.1",
     "@govuk-prototype-kit/step-by-step": "2.2.2",
     "@govuk-prototype-kit/task-list": "2.0.0",
-    "@ministryofjustice/frontend": "^2.1.1",
-    "@x-govuk/govuk-prototype-components": "^3.0.3",
-    "govuk-frontend": "5.2.0",
-    "govuk-prototype-kit": "13.16.1",
+    "@ministryofjustice/frontend": "2.1.2",
+    "@x-govuk/govuk-prototype-components": "3.0.4",
+    "govuk-frontend": "5.3.0",
+    "govuk-prototype-kit": "13.16.2",
+    "hmrc-frontend": "6.15.0",
     "notifications-node-client": "8.0.0"
   }
 }
