--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@govuk-prototype-kit/task-list": "2.0.0",
     "@ministryofjustice/frontend": "2.1.2",
     "@x-govuk/govuk-prototype-components": "3.0.4",
+    "@x-govuk/govuk-prototype-filters": "^1.4.0",
     "govuk-frontend": "5.3.0",
     "govuk-prototype-kit": "13.16.2",
     "hmrc-frontend": "6.15.0",
