--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "scripts": {
     "dev": "govuk-prototype-kit dev",
     "serve": "govuk-prototype-kit serve",
-    "start": "govuk-prototype-kit start"
+    "start": "govuk-prototype-kit start",
+    "generate-data": "node ./scripts/generate-accounts.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@govuk-prototype-kit/common-templates": "2.0.1",
     "@govuk-prototype-kit/step-by-step": "2.2.3",
     "@govuk-prototype-kit/task-list": "2.0.0",
     "@ministryofjustice/frontend": "2.1.3",
-    "@x-govuk/govuk-prototype-components": "3.0.5",
-    "@x-govuk/govuk-prototype-filters": "^1.4.0",
-    "govuk-frontend": "5.4.0",
+    "@x-govuk/govuk-prototype-components": "3.0.6",
+    "@x-govuk/govuk-prototype-filters": "1.4.1",
+    "govuk-frontend": "5.4.1",
     "govuk-prototype-kit": "13.16.2",
-    "hmrc-frontend": "6.22.0",
+    "hmrc-frontend": "6.27.0",
     "notifications-node-client": "8.2.0"
   }
 }
