--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@ministryofjustice/frontend": "5.1.3",
     "@x-govuk/govuk-prototype-components": "4.0.0",
     "@x-govuk/govuk-prototype-filters": "1.4.2",
-    "govuk-frontend": "5.6.0",
+    "govuk-frontend": "^5.11.0",
     "govuk-prototype-kit": "13.16.2",
     "hmrc-frontend": "6.31.0",
     "notifications-node-client": "8.2.1"
+  },
+  "engines": {
+      "node": "18.x"
   }
 }
